- Added speed limits for individual torrents
- Added dynamic diskspace checking.
- Added option to disable diskspace preallocation
- Improved system tray popup icon : we now use boxed style KPassivePopup instead of Qt tooltips, it also only disappears when the cursor
is moved away from the tray icon and the text can be updated
- The log now gets autorotated when it gets larger then 10 MB

Changes in 2.1.4
- Fixed crash in parsing of DHT messages
- Fixed problem with files with .. in their name
- ScanFolder can now handle incomplete torrent files properly

Changes in 2.1.3
- Fixed crash in torrent parsing

Changes in 2.1.2
- Fix 2 security vulnerabilities (thanks to Bryan Burns from Juniper Networks
for finding them)

Changes in 2.1.1
- Rewrite of webserver
- New webgui : coldmilk
- Networking thread has been split up in 2 threads, one for upload, one for
download
- Significant speed improvements when downloading over a LAN

Changes in 2.1
- Some minor bug fixes

Changes in 2.1rc1
- Share ratio column added in main view
- Added option to use a different proxy then the default KDE proxy for HTTP trackers
- Added feature to show/hide columns in main view 
- Moved search box to bottom, so that the window is not enlarged in 1024 x 768 resolutions, when you search for something
- Made sure no duplicates get into search box history
- Fixed 'Trackers' tab in InfoWidget to properly resize tracker URL label
- Zeroconf plugin added
- Added µTorrent compatible PEX
- Fixed a bug in WebInterface plugin causing JS tooltips not to show.
- Fixed a bug with 'Stop All' not stopping queued torrents.


Changes in 2.1beta1 
- WebGUI plugin added
- KTorrent can make trackerless torrents with DHT nodes.
- Added feature which saves the list of peers when a torrent is stopped and when it is started again, the list is reloaded and the peers are added to the list of potential peers so that we can quickly make connections to peers.
- Revamped data checker a bit, it now uses a separate thread.