@@ -26,6 +26,7 @@ tab of each view
 - Improved system tray popup icon : we now use boxed style KPassivePopup instead of Qt tooltips, it also only disappears when the cursor
 is moved away from the tray icon and the text can be updated
 - The log now gets autorotated when it gets larger then 10 MB
+- Import dialog is now network transparent for the torrent file 
 
 Changes in 2.1.4
 - Fixed crash in parsing of DHT messages
